--- a/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
@@ -86,7 +86,7 @@
                 <div class="ibox-title">
                     <div class="form-group">
                     <div class="form-inline">
-                        <input size="50" name="orderDate" placeholder="时间" class="form-control" type="text">
+                        <input size="50" name="createDate" placeholder="时间" class="form-control" type="text">
                         <button id="dateSearch" type="button" class="btn  btn-success ">查询</button>
                         <!--<button type="button" class="btn  btn-success ">导出明细</button>-->
                     </div>
@@ -186,7 +186,7 @@
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>-->
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/moment.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
-<script src="../../../assets/js/manage/supplier/salesStatistics.js" th:inline="javascript"></script>
+<script src="../../../assets/js/manage/supplier/salesStatistics.js"></script>
 </body>
 
 </html>
