--- a/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
@@ -120,8 +120,7 @@
                                     <tr>
                                         <th data-field="state" data-checkbox="true"></th>
                                         <th data-field="orderNo" data-align="center">订单号</th>
-                                        <th data-field="touristName" data-align="center"
-                                            data-formatter="touristNameFormatter">商品名称</th>
+                                        <th data-field="touristName" data-align="center">商品名称</th>
                                         <th data-field="orderMoney" data-align="center"
                                             data-sortable="true">订单金额</th>
                                         <th data-field="commission" data-align="center"
@@ -153,8 +152,7 @@
                                     <thead>
                                     <tr>
                                         <th data-field="state" data-checkbox="true"></th>
-                                        <th data-field="touristName" data-align="center"
-                                            data-formatter="touristNameFormatter">商品名称</th>
+                                        <th data-field="touristName" data-align="center">商品名称</th>
                                         <th data-field="price" data-align="center">单价</th>
                                         <th data-field="rebate" data-align="center">佣金比例</th>
                                         <th data-field="buyTotal" data-align="center">购买次数</th>
@@ -186,7 +184,9 @@
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>-->
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/moment.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
-<script src="../../../assets/js/manage/supplier/salesStatistics.js"></script>
+<script type="text/javascript" th:inline="javascript">
+</script>
+<script src="../../../assets/js/manage/supplier/statistics.js"></script>
 </body>
 
 </html>
