--- a/tourist-web/src/main/webapp/view/manage/supplier/supplierDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/supplierDetailsH+.html
@@ -56,6 +56,7 @@
                                 <div class="col-sm-10">
                                     <img id="pictureUrl" style="width: 150px;height: 100px"  res:src="*{businessLicenseUri}"
                                          src="http://placehold.it/300x200?text=营业执照&size=200"/>
+                                    <!--<input name="path" value="" th:value="*{bu}" type="hidden"/>-->
                                     <label title="上传图片" for="upload" class="btn btn-success">
                                         <input onchange="uploadImage()" type="file" accept="image/*"
                                                id="upload" name="upload" class="hide"/> 上传营业执照
