--- a/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
+++ b/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
@@ -23,7 +23,7 @@
         <div class="xiaofeijilv">
             <ul>
                 <li class="t">
-                    <input type="hidden" id="orderId" th:value="${order.mallOrderNo}">
+                    <input type="hidden" id="orderId" th:value="${order.id}">
                     <input type="hidden" id="customerId" th:value="${customerId}">
                     <div class="DDH">订单编号：<span th:text="${order.orderNo}">201604943218493</span>
                         <p style="clear:both"></p>
@@ -64,7 +64,7 @@
                 </h4>
                 <p class="weui_media_desc ztdx" th:text="'年龄:'+${traveler.age}">年龄:23</p>
                 <p class="weui_media_desc ztdx" th:text="'联系电话:'+${traveler.telPhone}">联系电话:1563232323</p>
-                <p class="weui_media_desc ztdx" th:text="'身份证号:'+${traveler.IDNo}">身份证号:332325******256569</p>
+                <p class="weui_media_desc ztdx" th:text="'身份证号:'+${traveler.number}">身份证号:332325******256569</p>
             </div>
             <div class="weui_media_box weui_media_text massgea">
                 <h4 class="weui_media_title"><span>里里</span>&nbsp;/&nbsp;<i
